.devops/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-dep
spec:
  selector:
    app: my-dep
  ports:
    - port: 1234
      targetPort: 1234
      protocol: TCP
