.devops/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-dep
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myservice.localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-dep
              port: 
                number: 1234
